--- a/app/src/main/res/layout/activity_add_imagen.xml
+++ b/app/src/main/res/layout/activity_add_imagen.xml
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="@string/btAdd"
+        android:text="@string/btAñadir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btSelectImagen" />
