--- a/app/src/main/res/layout/item_flora.xml
+++ b/app/src/main/res/layout/item_flora.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_color">
 
     <ImageView
         android:id="@+id/ivFlora"
@@ -25,6 +26,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvNombre"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivFlora"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,6 +39,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvFamilia"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivFlora"
         app:layout_constraintTop_toBottomOf="@+id/tvNombre" />
@@ -49,6 +52,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvIdentificacion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivFlora"
         app:layout_constraintTop_toBottomOf="@+id/tvFamilia" />
@@ -61,6 +65,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvAltitud"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvHabitat"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +79,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvHabitat"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvAltitud"
@@ -87,6 +93,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvFitosociologia"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvBiotipo"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +107,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvBiotipo"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvFitosociologia"
@@ -113,6 +121,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvBiologiaReproductiva"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvFloracion"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,6 +135,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvFloracion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvBiologiaReproductiva"
@@ -139,6 +149,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvFructificacion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvExpresionSexual"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,6 +163,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvExpresionSexual"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvFructificacion"
@@ -165,6 +177,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvPolinazcion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvDispersion"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -178,6 +191,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvDispersion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvPolinizacion"
@@ -191,6 +205,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvNumeroCromosomatico"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvReproduccionAsexual"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -204,6 +219,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvReproduccionAsexual"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvNumeroCromosomatico"
@@ -217,6 +233,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvDistribucion"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvBiologia"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -230,6 +247,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvBiologia"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvDistribucion"
@@ -243,6 +261,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvDemografia"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toStartOf="@+id/tvAmenazas"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -256,6 +275,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvAmenazas"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvDemografia"
@@ -269,6 +289,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:text="@string/tvMedidasPropuestas"
+        android:textColor="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDemografia" />
