--- a/app/src/main/res/layout/activity_add_imagen.xml
+++ b/app/src/main/res/layout/activity_add_imagen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     tools:context=".view.activity.AddImagenActivity">
 
     <EditText
@@ -15,12 +16,15 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/etIdImagen"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
+        tools:ignore="TextContrastCheck" />
 
     <EditText
         android:id="@+id/etNombreImagen"
@@ -34,6 +38,8 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etIdImagen"
@@ -51,6 +57,8 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/primary_dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNombreImagen"
@@ -62,9 +70,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/btSelectImagen"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescripcionImagen" />
+        app:layout_constraintTop_toBottomOf="@+id/etDescripcionImagen"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btAddImagen"
@@ -72,7 +82,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/btAñadir"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btSelectImagen" />
+        app:layout_constraintTop_toBottomOf="@+id/btSelectImagen"
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
